About sticker location fix
Was causing horizontal scroll...

--- a/home.css
+++ b/home.css
@@ -392,8 +392,8 @@ ul>a>div>p {
   }
   
   .green-smile {
-    top: -16px !important;
-    right: -16px;
+    top: -20px !important;
+    right: -10px;
     height: 100px;
   }
   
@@ -447,6 +447,7 @@ ul>a>div>p {
     margin-bottom: unset !important;
   }
 }
+
 
 /* Utilities */
 
